--- a/example/1.6/cp/Dockerfile
+++ b/example/1.6/cp/Dockerfile
@@ -9,13 +9,18 @@ COPY . .
 # Fetch dependencies.
 RUN go mod download
 # Build the binary.
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags="-w -s" -o /go/bin/charge_point example/cp1.6/charge_point_sim.go
+RUN GOOS=linux GOARCH=amd64 go build -ldflags="-w -s" -o /go/bin/charge_point example/1.6/cp/*.go
 
 ############################
 # STEP 2 build a small image
 ############################
-FROM scratch
+FROM alpine
 
 COPY --from=builder /go/bin/charge_point /bin/charge_point
+
+# Add CA certificates
+# It currently throws a warning on alpine: WARNING: ca-certificates.crt does not contain exactly one certificate or CRL: skipping.
+# Ignore the warning.
+RUN apk update && apk add ca-certificates && rm -rf /var/cache/apk/* && update-ca-certificates
 
 CMD [ "charge_point" ]
