--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ jobs:
         - wget -O toxiproxy-2.1.4.deb https://github.com/Shopify/toxiproxy/releases/download/v2.1.4/toxiproxy_2.1.4_amd64.deb
         - sudo dpkg -i toxiproxy-2.1.4.deb
         - sudo cp ws/toxiproxy.service /lib/systemd/system/
-        - sudo systemctl toxiproxy start
+        - sudo systemctl start toxiproxy
       script:
         - go build ./...
         - go get golang.org/x/tools/cmd/cover
