Fix typo in example openssl-cs.conf
Signed-off-by: Lorenzo Donini <lorenzo.donini@motius.de>

--- a/example/1.6/openssl-cs.conf
+++ b/example/1.6/openssl-cs.conf
@@ -9,6 +9,6 @@ basicConstraints        = CA:FALSE
 subjectKeyIdentifier    = hash
 keyUsage                = digitalSignature, keyEncipherment, dataEncipherment
 extendedKeyUsage        = serverAuth
-subjectAltName          = @alt_naes
+subjectAltName          = @alt_names
 [alt_names]
 DNS.1 = central-system
