--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,24 +8,44 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-      - uses: docker/setup-buildx-action@v1
+        uses: actions/checkout@v3
+      - name: Setup QEMU
+        uses: docker/setup-qemu-action@v2
+      - uses: docker/setup-buildx-action@v2
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build Central System 1.6 example
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           push: true
           tags: ldonini/ocpp1.6-central-system:latest
           file: example/1.6/cs/Dockerfile
+          platforms: linux/amd64,linux/arm64
           context: .
       - name: Build Charge Point 1.6 example
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           push: true
           tags: ldonini/ocpp1.6-charge-point:latest
           file: example/1.6/cp/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          context: .
+      - name: Build CSMS 2.0.1 example
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: ldonini/ocpp2.0.1-csms:latest
+          file: example/2.0.1/csms/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          context: .
+      - name: Build Charging Station 2.0.1 example
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: ldonini/ocpp2.0.1-chargingstation:latest
+          file: example/2.0.1/chargingstation/Dockerfile
+          platforms: linux/amd64,linux/arm64
           context: .
