--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: ldonini/ocpp2.0.1-chargingstation:${{ github.event.release.tag_name }}
+          tags: ldonini/ocpp2.0.1-charging-station:${{ github.event.release.tag_name }}
           file: example/2.0.1/chargingstation/Dockerfile
           platforms: linux/amd64,linux/arm64
           context: .
